--- a/calendar.html
+++ b/calendar.html
@@ -9,6 +9,36 @@
     <script src="javascripts/main.js"></script>
 </head>
 <body>
-    
+    <div class="calendar-cont">
+        <div class="nav"></div>
+        <div class="calendar-content">
+            <h1>Today</h1>
+            <div class="calendar-row">
+                <div class="task-card">
+                    <div class="task-top">
+                        <h1>29</h1>
+                        <h2>Thursday</h2>
+                    </div>
+                    <div class="task-bottom">
+                        <h3 class="current-tasks">Current Tasks</h3>
+                        <ul class="task-ul">
+                            <li class="task-li">Team meeting at 5:00pm</li>
+                            <li class="task-li">Play Volleyball at 6:00pm</li>
+                            <li class="task-li">Finish Squid Game at 7:00pm</li>
+                            <li class="task-li">Sleep Hard</li>
+                        </ul>
+                        <div class="task-card-divider"></div>
+                        <a href="eventcreation.html" class="black-button">Create Event</a>
+                    </div>
+                </div>
+                <div class="calendar-divider"></div>
+                <div class="calendar-section">
+                    <h1>Calendar</h1>
+                    <img src="images/calendar.png" alt="">
+                    <a href="" class="orange-button">Hello</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
