added media query for calendar page, and started index

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
     <script src="javascripts/main.js"></script>
 </head>
 <body>
-    <a href="" class="orange-button">Orange Button</a>
-    <a href="" class="black-button">Black Button</a>
+    <div class="landing-cont">
+        <img src="images/dorito.png" alt="" class="dorito">
+        <div class="landing-top-bar">
+            <a href="" class="black-button">Login</a>
+        </div>
+        <a href="" class="orange-button">Orange Button</a>
+    </div>
+    
 </body>
 </html>
