finished landing page and its media queries

--- a/index.html
+++ b/index.html
@@ -12,9 +12,21 @@
     <div class="landing-cont">
         <img src="images/dorito.png" alt="" class="dorito">
         <div class="landing-top-bar">
-            <a href="" class="black-button">Login</a>
+            <a href="login.html" class="black-button">Login</a>
         </div>
-        <a href="" class="orange-button">Orange Button</a>
+        <div class="landing-mid-section">
+                <img src="images/john.svg" alt="John" width="400px" height="400px">
+                <div class="landing-col">
+                <h1 class="landing-heading">Welcome to John</h1>
+                <p class="landing-description">
+                    Take your event planning to the next level with our state-of-the-art web application. 
+                    Create events with minimal steps and easy-to-use navigation. 
+                    Track costs with an implemented cost splitter that allocates split costs to attendees. 
+                    Get started for free now!
+                </p>
+                <a href="signup.html" class="orange-button">Sign Up</a>
+            </div>
+        </div>
     </div>
     
 </body>
