finished login page, made global media queries for buttons

--- a/calendar.html
+++ b/calendar.html
@@ -35,7 +35,7 @@
                 <div class="calendar-section">
                     <h1>Calendar</h1>
                     <img src="images/calendar.png" alt="">
-                    <a href="" class="orange-button">Hello</a>
+                    <a href="" class="orange-button">View All Events</a>
                 </div>
             </div>
         </div>
