--- a/login.html
+++ b/login.html
@@ -9,6 +9,33 @@
     <script src="javascripts/main.js"></script>
 </head>
 <body>
+    <div class="login-cont">
+        <img src="images/dorito.png" alt="" class="dorito">
+        <div class="login-box">
+            <div class="login-header-cont">
+                <a href="index.html">
+                    <img src="images/icons/back-button.png" alt="back button" class="back-button">
+                </a>
+            </div>
+            <h1 class="login-header">Log In</h1>
+            <div class="social-media-cont">
+                <img src="images/icons/facebook.png" alt="" class="social-media-icon">
+                <img src="images/icons/google.png" alt="" class="social-media-icon">
+            </div>
+            <div class="white-line-break">
+                <div class="login-white-line"></div>
+                <h2>OR</h2>
+                <div class="login-white-line"></div>
+            </div>
+            <form action="" class="login-form">
+                <input type="text" id="login-email" placeholder="E-Mail" class="login-text-input">
+                <input type="text" id="login-password" placeholder="Password" class="login-text-input">
+            </form>
+            <a href="#">Forgot Password?</a>
+            <a href="calendar.html" class="orange-button">Log In</a>
+        </div>
+    </div>
     
+
 </body>
 </html>
