finished login and sign up pages

--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="login-cont">
-        <img src="images/dorito.png" alt="" class="dorito">
+        <img src="images/dorito.png" alt="dorito" class="dorito">
         <div class="login-box">
             <div class="login-header-cont">
                 <a href="index.html">
@@ -28,7 +28,7 @@
                 <div class="login-white-line"></div>
             </div>
             <form action="" class="login-form">
-                <input type="text" id="login-email" placeholder="E-Mail" class="login-text-input">
+                <input type="text" id="login-email" placeholder="Username or E-Mail" class="login-text-input">
                 <input type="text" id="login-password" placeholder="Password" class="login-text-input">
             </form>
             <a href="#">Forgot Password?</a>
