AJAX call is done and is on login.html

--- a/signup.html
+++ b/signup.html
@@ -19,8 +19,8 @@
             </div>
             <h1 class="login-header">Sign Up</h1>
             <div class="social-media-cont">
-                <img src="images/icons/facebook.png" alt="" class="social-media-icon">
-                <img src="images/icons/google.png" alt="" class="social-media-icon">
+                <a href=""><img src="images/icons/facebook.png" alt="" class="social-media-icon"></a>
+                <a href=""><img src="images/icons/google.png" alt="" class="social-media-icon"></a>
             </div>
             <div class="white-line-break">
                 <div class="login-white-line"></div>
@@ -28,8 +28,8 @@
                 <div class="login-white-line"></div>
             </div>
             <form action="" class="login-form">
-                <input type="email" id="signup-username" placeholder="E-mail" class="login-text-input">
-                <input type="text" id="signup-email" placeholder="Username" class="login-text-input">
+                <input type="email" id="signup-email" placeholder="E-mail" class="login-text-input">
+                <input type="text" id="signup-username" placeholder="Username" class="login-text-input">
                 <input type="text" id="signup-password" placeholder="Password" class="login-text-input">
                 <input type="text" id="signup-confirm-password" placeholder="Confirm Password" class="login-text-input">
             </form>
