--- a/login.html
+++ b/login.html
@@ -18,21 +18,28 @@
                 </a>
             </div>
             <h1 class="login-header">Log In</h1>
+            <p>
+                Enter 
+                <br>Username: BCIT, 
+                <br>Password: Shoulderboulders 
+                <br>to access the app
+                <br> otherwise error will show
+            </p>
             <div class="social-media-cont">
-                <img src="images/icons/facebook.png" alt="" class="social-media-icon">
-                <img src="images/icons/google.png" alt="" class="social-media-icon">
+                <a href=""><img src="images/icons/facebook.png" alt="" class="social-media-icon"></a>
+                <a href=""><img src="images/icons/google.png" alt="" class="social-media-icon"></a>
             </div>
             <div class="white-line-break">
                 <div class="login-white-line"></div>
                 <h2>OR</h2>
                 <div class="login-white-line"></div>
             </div>
-            <form action="" class="login-form">
+            <form action="" class="login-form" id="login-form">
                 <input type="text" id="login-email" placeholder="Username or E-Mail" class="login-text-input">
                 <input type="text" id="login-password" placeholder="Password" class="login-text-input">
             </form>
             <a href="#">Forgot Password?</a>
-            <a href="calendar.html" class="orange-button">Log In</a>
+            <a class="orange-button" id="login-button">Log In</a>
         </div>
     </div>
     
