every MVP is done, just need cost splitter page

--- a/calendar.html
+++ b/calendar.html
@@ -10,7 +10,22 @@
 </head>
 <body>
     <div class="calendar-cont">
-        <div class="nav"></div>
+        <nav>
+            <div class="nav-row">
+                <a href="calendar.html" class="john-logo">JOHN</a>
+                <div class="nav-link-row">
+                    <a href="calendar.html" class="nav-item">calendar</a>
+                    <div class="nav-divider"></div>
+                    <a href="forecast.html" class="nav-item">3 day forecast</a>
+                    <div class="nav-divider"></div>
+                    <a href="costsplitter.html" class="nav-item">cost splitter</a>
+                    <div class="nav-divider"></div>
+                    <div class="avatar-cont">
+                        <img src="images/avatar.jpg" alt="Profile Picture" class="avatar">
+                    </div>
+                </div>
+            </div>
+        </nav>
         <div class="calendar-content">
             <h1>Today</h1>
             <div class="calendar-row">
