--- a/forecast.html
+++ b/forecast.html
@@ -10,9 +10,100 @@
 </head>
 <body>
     <div class="forecast-cont">
+        <nav>
+            <div class="nav-row">
+                <a href="calendar.html" class="john-logo">JOHN</a>
+                <div class="nav-link-row">
+                    <a href="calendar.html" class="nav-item">calendar</a>
+                    <div class="nav-divider"></div>
+                    <a href="forecast.html" class="nav-item">3 day forecast</a>
+                    <div class="nav-divider"></div>
+                    <a href="costsplitter.html" class="nav-item">cost splitter</a>
+                    <div class="nav-divider"></div>
+                    <div class="avatar-cont">
+                        <img src="images/avatar.jpg" alt="Profile Picture" class="avatar">
+                    </div>
+                </div>
+            </div>
+        </nav>
         <div class="forecast-content">
             <div class="event-info-cont">
-                <div class="event-info-card" id="event-one">
+                <div class="event-info-card">
+                    <div class="event-info-top">
+                        <h1>29</h1>
+                        <h2>Thursday</h2>
+                        <h1>12:30pm</h1>
+                    </div>
+                    <div class="event-info-bottom">
+                        <h2>Binge Squid Game</h2>
+                        <div>
+                            <p>Buidling of Density</p>
+                            <p>5+ People Attending</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="event-info-card">
+                    <div class="event-info-top">
+                        <h1>30</h1>
+                        <h2>Thursday</h2>
+                        <h1>12:30pm</h1>
+                    </div>
+                    <div class="event-info-bottom">
+                        <h2>Binge Squid Game</h2>
+                        <div>
+                            <p>Buidling of Density</p>
+                            <p>5+ People Attending</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="event-info-card">
+                    <div class="event-info-top">
+                        <h1>29</h1>
+                        <h2>Thursday</h2>
+                        <h1>12:30pm</h1>
+                    </div>
+                    <div class="event-info-bottom">
+                        <h2>Binge Squid Game</h2>
+                        <div>
+                            <p>Buidling of Density</p>
+                            <p>5+ People Attending</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="event-info-card">
+                    <div class="event-info-top">
+                        <h1>29</h1>
+                        <h2>Thursday</h2>
+                        <h1>12:30pm</h1>
+                    </div>
+                    <div class="event-info-bottom">
+                        <h2>Binge Squid Game</h2>
+                        <div>
+                            <p>Buidling of Density</p>
+                            <p>5+ People Attending</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="event-info-card">
+                    <div class="event-info-top">
+                        <h1>29</h1>
+                        <h2>Thursday</h2>
+                        <h1>12:30pm</h1>
+                    </div>
+                    <div class="event-info-bottom">
+                        <h2>Binge Squid Game</h2>
+                        <div>
+                            <p>Buidling of Density</p>
+                            <p>5+ People Attending</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="event-info-card">
                     <div class="event-info-top">
                         <h1>29</h1>
                         <h2>Thursday</h2>
