--- a/eventcreation.html
+++ b/eventcreation.html
@@ -9,6 +9,34 @@
     <script src="javascripts/main.js"></script>
 </head>
 <body>
-    
+    <div class="event-creation-cont">
+        <nav>
+            <div class="nav-row">
+                <a href="calendar.html" class="john-logo">JOHN</a>
+                <div class="nav-link-row">
+                    <a href="calendar.html" class="nav-item">calendar</a>
+                    <div class="nav-divider"></div>
+                    <a href="forecast.html" class="nav-item">3 day forecast</a>
+                    <div class="nav-divider"></div>
+                    <a href="costsplitter.html" class="nav-item">cost splitter</a>
+                    <div class="nav-divider"></div>
+                    <div class="avatar-cont">
+                        <img src="images/avatar.jpg" alt="Profile Picture" class="avatar">
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <div class="event-creation-content">
+            <h1>Event Creation</h1>
+            <form action="">
+                <input type="text" placeholder="Name your event" />
+                <input type="text" placeholder="Describe the event" />
+                <h2>What days will you meet?</h2>
+                <img src="images/calendar.png" alt="" width="300px" height="200px">
+                <input type="text" placeholder="Where will you meet?" />
+                <a href="" class="orange-button" id="create-event-button">Create Event</a>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
