--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
             <h1 class="login-header">Log In</h1>
             <p>
                 Enter 
-                <br>Username: BCIT, 
+                <br>Username: BCIT 
                 <br>Password: Shoulderboulders 
                 <br>to access the app
                 <br> otherwise error will show
