cost splitter html js done, still needs css

--- a/costsplitter.html
+++ b/costsplitter.html
@@ -9,6 +9,17 @@
     <script src="javascripts/main.js"></script>
 </head>
 <body>
-    
+    <main>
+        <form>
+            <h2>Cost Splitter</h2>
+            <label for="people">Number of People</label>
+            <input type="number" id="people" />
+            <label for="totalcost">Total Cost</label>
+            <input type="text" id="totalcost" />
+            <input type="button" value="Calculate" onclick="calcCost()"/>
+            <label for="indcost">Cost Per Attendee</label>
+            <input type="text" id="indcost" />
+        </form>
+    </main>
 </body>
 </html>
