--- a/costsplitter.html
+++ b/costsplitter.html
@@ -13,6 +13,22 @@
 </head>
 <body>
     <main>
+        <nav>
+            <div class="nav-row">
+                <a href="calendar.html" class="john-logo">JOHN</a>
+                <div class="nav-link-row">
+                    <a href="calendar.html" class="nav-item">calendar</a>
+                    <div class="nav-divider"></div>
+                    <a href="forecast.html" class="nav-item">3 day forecast</a>
+                    <div class="nav-divider"></div>
+                    <a href="costsplitter.html" class="nav-item">cost splitter</a>
+                    <div class="nav-divider"></div>
+                    <div class="avatar-cont">
+                        <img src="images/avatar.jpg" alt="Profile Picture" class="avatar">
+                    </div>
+                </div>
+            </div>
+        </nav>
         <form>
             <h2>Cost Splitter</h2>
             <section>
@@ -23,7 +39,7 @@
                 <label for="totalcost">Total Cost</label>
                 <input type="text" id="totalcost" />
             </section>
-            <input id="calcbutton" type="button" value="Calculate" onclick="calcCost()"/>
+            <input class="orange-button" id="calcbutton" type="button" value="Calculate" onclick="calcCost()"/>
             <section>
                 <label for="indcost">Cost Per Attendee</label>
                 <input type="text" id="indcost" />
